--- a/arch/arm/configs/msm7627-EF32K-perf_defconfig
+++ b/arch/arm/configs/msm7627-EF32K-perf_defconfig
@@ -509,6 +509,8 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS=y
+CONFIG_CPU_FREQ_GOV_LAZY=y
 CONFIG_CPU_FREQ_PERFLOCK=y
 CONFIG_CPU_FREQ_PERFLOCK_USERSPACE=y
 # CONFIG_CPU_IDLE is not set
